[ADDED EMAIL VERIFICATION]
